# FiveStar

./: BookData.cpp  BookData.h  CMakeLists.txt  Management.cpp  Management.h  Report.cpp  Report.h  Sale.cpp  Sale.h  TitleInfo.cpp  TitleInfo.h  globals.h  main.cpp  menu.cpp  menu.h  utils.cpp  utils.h
